v0.1.3/_sources/autoapi/puma/tests/test_metrics/index.rst.txt
:py:mod:`puma.tests.test_metrics`
=================================

.. py:module:: puma.tests.test_metrics

.. autoapi-nested-parse::

   Unit test script for the functions in metrics.py



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   puma.tests.test_metrics.separation_TestCase
   puma.tests.test_metrics.eff_err_TestCase
   puma.tests.test_metrics.rej_err_TestCase




.. py:class:: separation_TestCase(methodName='runTest')

   Bases: :py:obj:`unittest.TestCase`

   Test class for the puma.metrics.calc_separation.

   Create an instance of the class that will use the named test
   method when executed. Raises a ValueError if the instance does
   not have a method with the specified name.

   .. py:method:: setUp()

      Define a default (seeded) random number generator for all tests


   .. py:method:: test_equal_datasets()

      Separation of two equal datasets (=0)


   .. py:method:: test_completely_separated()

      Separation of two completely separated distributions


   .. py:method:: test_completely_separated_bad_binning()

      Separation of two completely separated distributions if the binning
      if chosen such that they share one bin


   .. py:method:: test_half_separated()

      Separation of 0.5


   .. py:method:: test_return_bins()

      Test if bins are correctly returned


   .. py:method:: test_bins_range()

      Test if bins_range is properly treated.



.. py:class:: eff_err_TestCase(methodName='runTest')

   Bases: :py:obj:`unittest.TestCase`

   Test class for the puma.metrics functions.

   Create an instance of the class that will use the named test
   method when executed. Raises a ValueError if the instance does
   not have a method with the specified name.

   .. py:method:: test_zero_N_case()

      Test eff_err function.


   .. py:method:: test_negative_N_case()

      Test eff_err function.


   .. py:method:: test_one_case()

      Test eff_err function.


   .. py:method:: test_example_case()

      Test eff_err function.



.. py:class:: rej_err_TestCase(methodName='runTest')

   Bases: :py:obj:`unittest.TestCase`

   Test class for the puma.metrics functions.

   Create an instance of the class that will use the named test
   method when executed. Raises a ValueError if the instance does
   not have a method with the specified name.

   .. py:method:: setUp()

      Hook method for setting up the test fixture before exercising it.


   .. py:method:: test_zero_N_case()

      Test rej_err function.


   .. py:method:: test_negative_N_case()

      Test rej_err function.


   .. py:method:: test_one_case()

      Test rej_err function.


   .. py:method:: test_zero_x_case()

      Test rej_err function.


   .. py:method:: test_example_case()

      Test rej_err function.



